tests/NormalTests/paczka1/fuzzy1/52032117.err
Error in line 7: L281Q5P521 Q455 52,8
Error in line 19: A455 S76 64,0
Error in line 15: rzvSd2jWN S48 19,7
Error in line 22: rzvSd2jWN S76 40,0
